--- a/.gitignore
+++ b/.gitignore
@@ -237,3 +237,4 @@ plugin-sample/.gradle/
 plugin-sample/.idea/
 replugin-plugin-gradle-androidx/.gradle
 replugin-plugin-gradle-androidx/.idea
+*/*.iml
