--- a/plugin-sample/build.gradle
+++ b/plugin-sample/build.gradle
@@ -5,13 +5,13 @@ buildscript {
         google()
         jcenter()
         maven {
-            url uri('../repo')
+            url uri("file://${System.getenv('HOME')}/.m2/repository")
         }
         
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.5.3'
-        classpath 'com.froyo.replugin:replugin-plugin-gradle-androidx:0.1.0'
+        classpath 'com.froyo.replugin:replugin-plugin-gradle-androidx:2.3.3.0'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -21,7 +21,9 @@ allprojects {
     repositories {
         google()
         jcenter()
-        
+        maven {
+            url uri("file://${System.getenv('HOME')}/.m2/repository")
+        }
     }
 }
 
