--- a/plugin-sample/build.gradle
+++ b/plugin-sample/build.gradle
@@ -4,10 +4,7 @@ buildscript {
     repositories {
         google()
         jcenter()
-        maven {
-            url uri("file://${System.getenv('HOME')}/.m2/repository")
-        }
-        
+        mavenLocal()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.5.3'
@@ -21,9 +18,7 @@ allprojects {
     repositories {
         google()
         jcenter()
-        maven {
-            url uri("file://${System.getenv('HOME')}/.m2/repository")
-        }
+        mavenLocal()
     }
 }
 
