--- a/plugin-sample/plugin-demo1/app/build.gradle
+++ b/plugin-sample/plugin-demo1/app/build.gradle
@@ -66,7 +66,7 @@ repluginPluginConfig {
 }
 
 dependencies {
-    implementation "com.froyo.replugin:replugin-plugin-lib-androidx:${RP_VERSION}"
+    implementation "io.github.froyohuang:replugin-plugin-lib-androidx:${RP_VERSION}"
     implementation 'androidx.appcompat:appcompat:1.1.0'
 //    compileOnly files('libs/fragment.jar')//这个jar就是从Support-fragment中提取出来的并非特制包目的是为了骗过编译期
     compileOnly files('libs/common-utils-lib-1.0.0.jar')//这个jar就是从Host的utils中编译生成的，其目的是为了骗过编译期
