upadte demo2 for test appcompat

--- a/host-sample/host/app/build.gradle
+++ b/host-sample/host/app/build.gradle
@@ -36,7 +36,7 @@ android {
 
 apply plugin: 'replugin-host-gradle-androidx'
 repluginHostConfig {
-    useAppCompat = true
+    useAppCompat = false
 
     // 可以在这里自定义常驻进程的名字
     // persistentName = ":XXXXService"
