--- a/plugin-sample/plugin-demo2/build.gradle
+++ b/plugin-sample/plugin-demo2/build.gradle
@@ -19,10 +19,13 @@ buildscript {
         mavenLocal()
         jcenter()
         google()
+//        maven{
+//            url "https://dl.bintray.com/froyo-github/Replugin-AndroidX"
+//        }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.5.3'
-        classpath "com.froyo.replugin:replugin-plugin-gradle-androidx:${RP_VERSION}"
+        classpath "io.github.froyohuang:replugin-plugin-gradle-androidx:${RP_VERSION}"
     }
 }
 
@@ -31,6 +34,9 @@ allprojects {
         mavenLocal()
         jcenter()
         google()
+//        maven{
+//            url "https://dl.bintray.com/froyo-github/Replugin-AndroidX"
+//        }
     }
 }
 
